# yolov5_ros

yolov5_msgs/: CMakeLists.txt  package.xml
yolov5_msgs/msg/: Detection.msg
yolov5_ros/: CMakeLists.txt  package.xml
yolov5_ros/launch/: detect.launch
yolov5_ros/scripts/: detect_ros.py  resize.py
